--- a/style.css
+++ b/style.css
@@ -16,3 +16,7 @@ body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
 .legends ul li { flex: 1; padding: 8px 0; }
 .legends ul li:last-child { border-radius: 41px; margin-left: 10px; }
 #optionId { background-color: #161616; color: white; padding: 5px 0; width: auto; border: none; font-size: 14px; box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2); -webkit-appearance: button; appearance: button; outline: none; }
+.ui-widget-header { border: 0; background: #525252; color: #ffffff; font-weight: normal; }
+.ui-dialog { padding: 0; }
+.ui-corner-all { border-radius: 0; }
+.ui-widget-content { border: 0px solid #eeeeee; }
