--- a/style.css
+++ b/style.css
@@ -20,3 +20,4 @@ body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
 .ui-dialog { padding: 0; }
 .ui-corner-all { border-radius: 0; }
 .ui-widget-content { border: 0px solid #eeeeee; }
+.pageloader {position: fixed;left: 0px;top: 0px;width: 100%;height: 100%;z-index: 9999;background: url('images/30.gif') 50% 50% no-repeat rgb(249, 249, 249);opacity: .8; }
