--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
 .container { padding: 10px 20px; box-sizing: border-box; }
 .header { z-index: 1; background: #161616; width: 100%; position: relative; padding: 20px 0; }
 .hear-wrapper { display: flex; justify-content: space-between; color: #fff; align-items: center; }
-.legends { position: relative; z-index: 1; background: #fff; border-radius: 21px; padding: 10px 20px; left: 20px; top: 20px; max-width: 280px; width: 100%; }
+.legends { display: none; position: relative; z-index: 1; background: #fff; border-radius: 21px; padding: 10px 20px; top: 0; max-width: 280px; margin-right: 0; width: 100%; margin-left: auto; right: 0; -ms-transform: scale(0.8, 0.8); -webkit-transform: scale(0.8, 0.8); transform: scale(0.8, 0.8); }
 .legends ul { list-style: none; padding: 0; display: flex; justify-content: center; align-items: center; margin: 0; }
 .legends ul li { flex: 1; padding: 8px 0; }
 .legends ul li:last-child { border-radius: 41px; margin-left: 10px; }
