--- a/style.css
+++ b/style.css
@@ -21,3 +21,12 @@ body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
 .ui-corner-all { border-radius: 0; }
 .ui-widget-content { border: 0px solid #eeeeee; }
 .pageloader {position: fixed;left: 0px;top: 0px;width: 100%;height: 100%;z-index: 9999;background: url('images/30.gif') 50% 50% no-repeat rgb(249, 249, 249);opacity: .8; }
+
+div#exceptionContainer { z-index: 1; position: relative; background: #fff; width: 250px; left: 20px; padding: 10px; border-radius: 11px; top: 20px; }
+div#exceptionContainer h2 { font-size: 16px; margin-top: 0; }
+#exceptionContent { height: 260px; overflow-y: scroll; }
+#exceptionContent::-webkit-scrollbar { display: none; }
+#exceptionContent { -ms-overflow-style: none; scrollbar-width: none; }
+#exceptionContent .slide { margin-bottom: 10px; border: 1px solid; padding: 5px; border-radius: 11px; font-size: 14px; -webkit-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); -moz-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); }
+#exceptionContent .slide > span { display: block; margin: 7px 0; }
+#exceptionContent .slide > span > span { font-weight: bold; }
