--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
 .container { padding: 10px 20px; box-sizing: border-box; }
 .header { z-index: 1; background: #161616; width: 100%; position: relative; padding: 20px 0; }
 .hear-wrapper { display: flex; justify-content: space-between; color: #fff; align-items: center; }
-.wrapper { position: relative; z-index: 1; display: flex; }
+.wrapper { position: relative; display: flex; }
 .legends { position: relative; z-index: 1; background: #fff; border-radius: 21px; padding: 10px 20px; max-width: 280px; width: 100%; -ms-transform: scale(0.8, 0.8); -webkit-transform: scale(0.8, 0.8); transform: scale(0.8, 0.8); margin-left: auto; }
 .legends ul { list-style: none; padding: 0; display: flex; justify-content: center; align-items: center; margin: 0; }
 .legends ul li { flex: 1; padding: 8px 0; }
@@ -28,5 +28,6 @@ div#exceptionContainer h2 { font-size: 16px; margin-top: 0; }
 #exceptionContent::-webkit-scrollbar { display: none; }
 #exceptionContent { -ms-overflow-style: none; scrollbar-width: none; }
 #exceptionContent .slide { margin-bottom: 10px; border: 1px solid; padding: 5px; border-radius: 11px; font-size: 14px; -webkit-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); -moz-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); }
+#exceptionContent .slide:last-child { margin-bottom: 0; }
 #exceptionContent .slide > span { display: block; margin: 7px 0; }
 #exceptionContent .slide > span > span { font-weight: bold; }
