--- a/style.css
+++ b/style.css
@@ -11,13 +11,43 @@ body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
 .container { padding: 10px 20px; box-sizing: border-box; }
 .header { z-index: 1; background: #161616; width: 100%; position: relative; padding: 20px 0; }
 .hear-wrapper { display: flex; justify-content: space-between; color: #fff; align-items: center; }
-.legends { position: relative; z-index: 1; background: #fff; border-radius: 21px; padding: 10px 20px; left: 20px; top: 20px; max-width: 280px; width: 100%; }
+.wrapper { position: relative; display: flex; }
+
+.legends { position: relative; z-index: 1; background: #fff; border-radius: 21px; padding: 10px 20px; max-width: 200px; width: 100%; transform: scale(0.8, 0.8); margin-left: auto; font-size: 12px; max-height: 190px; }
 .legends ul { list-style: none; padding: 0; display: flex; justify-content: center; align-items: center; margin: 0; }
-.legends ul li { flex: 1; padding: 8px 0; }
-.legends ul li:last-child { border-radius: 41px; margin-left: 10px; }
+.legends ul li { flex: 1 1; padding: 4px 0; }
+.legends ul li:first-child { flex: 0.7; }
+.legends ul li:last-child { border-radius: 41px; margin-left: 10px; width: 20%; flex: 0.3; }
+
 #optionId { background-color: #161616; color: white; padding: 5px 0; width: auto; border: none; font-size: 14px; box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2); -webkit-appearance: button; appearance: button; outline: none; }
 .ui-widget-header { border: 0; background: #525252; color: #ffffff; font-weight: normal; }
 .ui-dialog { padding: 0; }
 .ui-corner-all { border-radius: 0; }
 .ui-widget-content { border: 0px solid #eeeeee; }
 .pageloader {position: fixed;left: 0px;top: 0px;width: 100%;height: 100%;z-index: 9999;background: url('images/30.gif') 50% 50% no-repeat rgb(249, 249, 249);opacity: .8; }
+div#exceptionContainer { left: 20px; z-index: 1; position: relative; background: #fff; width: 250px; padding: 10px; border-radius: 11px; top: 20px; }
+div#exceptionContainer h2 { font-size: 16px; margin-top: 0; }
+#exceptionContent { height: 260px; overflow-y: scroll; }
+#exceptionContent::-webkit-scrollbar { display: none; }
+#exceptionContent { -ms-overflow-style: none; scrollbar-width: none; }
+#exceptionContent .slide { margin-bottom: 10px; border: 1px solid; padding: 5px; border-radius: 11px; font-size: 14px; -webkit-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); -moz-box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75); }
+#exceptionContent .slide:last-child { margin-bottom: 0; }
+#exceptionContent .slide > span { display: block; margin: 7px 0; }
+#exceptionContent .slide > span > span { font-weight: bold; }
+#exceptionContainer #cancel { position: absolute; top: 10px; right: 10px; border: 1px solid #ccc; padding: 0px 5px; border-radius: 6px; cursor: pointer; }
+
+@media only screen and (min-width: 1500px) {
+    .legends { font-size: 13px; max-height: 200px; max-width: 230px; }
+}
+
+@media only screen and (min-width: 1600px) {
+    .legends { font-size: 14px; max-height: 220px; max-width: 230px; }
+}
+
+@media only screen and (min-width: 1750px) {
+    .legends { font-size: 15px; max-height: 230px; max-width: 240px; }
+}
+
+@media only screen and (min-width: 1950px) {
+    .legends { font-size: 17px; max-height: 240px; max-width: 310px; }
+}
